set up resnet and bounding boxes

--- a/BB_Creation.ipynb
+++ b/BB_Creation.ipynb
@@ -38,7 +38,7 @@
     "dataset = \"Dataset_2017\\\\\"\n",
     "data_aug_type = \"1\" #what data augmentation schema to train on\n",
     "mask_model_path = 'Trained_Models\\\\Mask-RCNN_Best_{}'.format(data_aug_type)\n",
-    "datasetType = \"Validation\"\n",
+    "\n",
     "device = \"cuda\"\n",
     "device = torch.device(device)"
    ]
@@ -61,13 +61,16 @@
     "\n",
     "        # Disable gradient computation and reduce memory consumption.\n",
     "        with torch.no_grad():\n",
-    "            for i, vdata in enumerate(dataloader):\n",
-    "                vinputs, vtargets = vdata\n",
+    "            for i in range(len(dataloader)):\n",
+    "\n",
+    "                vinputs, vtargets = next(iter(dataloader))#vdata\n",
     "                vtargets = move_data_to_device(vtargets, device)\n",
     "                with torch.amp.autocast(torch.device(device).type):\n",
     "                    outputs = model(torch.stack(vinputs).to(device))\n",
     "                    for j, out in enumerate(outputs):\n",
+    "                        #print(out)\n",
     "                        #print(\"{}\".format(img_labels.iloc[i*batch_size+j, 0]))\n",
+    "                        #print(i*batch_size+j)\n",
     "                        bb = out[\"boxes\"][out[\"scores\"].argmax(0).item()].tolist()\n",
     "                        writer.writerow([\"{}\".format(img_labels.iloc[i*batch_size+j, 0]),bb[0],bb[1],bb[2],bb[3]])"
    ]
@@ -388,6 +391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "datasetType = \"Test\"\n",
     "transforms = dataTransforms(data_aug_type)\n",
     "Train_Dataset      = ISICMaskImageDataset(dataset,\"Training\",transform=transforms, target_transform=v2.Lambda(lambda y: torch.zeros( 2, dtype=torch.int64).scatter_(dim=0, index=torch.tensor(int(y)), value=1)))\n",
     "Validation_Dataset = ISICMaskImageDataset(dataset,\"Validation\", transform=transforms, target_transform=v2.Lambda(lambda y: torch.zeros(\n",
@@ -415,7 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "writeCSV(mask_model,validation_dataloader,device,dataset,datasetType,data_aug_type)"
+    "writeCSV(mask_model,test_dataloader,device,dataset,datasetType,data_aug_type)"
    ]
   }
  ],
