--- a/BB_Creation.ipynb
+++ b/BB_Creation.ipynb
@@ -34,7 +34,7 @@
     "from torch.utils.data import DataLoader\n",
     "import torchvision.transforms.v2 as v2\n",
     "from cjm_pytorch_utils.core import  move_data_to_device\n",
-    "batch_size = 8\n",
+    "batch_size = 1\n",
     "dataset = \"Dataset_2017\\\\\"\n",
     "data_aug_type = \"1\" #what data augmentation schema to train on\n",
     "mask_model_path = 'Trained_Models\\\\Mask-RCNN_Best_{}'.format(data_aug_type)\n",
@@ -56,7 +56,7 @@
     "    img_labels = pd.read_csv(os.path.join(dataset, datasetType+\"_GroundTruth.csv\"))\n",
     "    with open(filepath, mode=\"w\", newline=\"\") as file:\n",
     "        writer = csv.writer(file)\n",
-    "        #writer.writerows(new_data)\n",
+    "        writer.writerow([\"image_id\",\"x1\",\"y1\",\"x2\",\"y2\"])\n",
     "        model.eval()\n",
     "\n",
     "        # Disable gradient computation and reduce memory consumption.\n",
@@ -391,7 +391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datasetType = \"Test\"\n",
+    "datasetType = \"Training\"\n",
     "transforms = dataTransforms(data_aug_type)\n",
     "Train_Dataset      = ISICMaskImageDataset(dataset,\"Training\",transform=transforms, target_transform=v2.Lambda(lambda y: torch.zeros( 2, dtype=torch.int64).scatter_(dim=0, index=torch.tensor(int(y)), value=1)))\n",
     "Validation_Dataset = ISICMaskImageDataset(dataset,\"Validation\", transform=transforms, target_transform=v2.Lambda(lambda y: torch.zeros(\n",
@@ -419,7 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "writeCSV(mask_model,test_dataloader,device,dataset,datasetType,data_aug_type)"
+    "writeCSV(mask_model,train_dataloader,device,dataset,datasetType,data_aug_type)"
    ]
   }
  ],
