fixed bounding boxes

--- a/BB_Creation.ipynb
+++ b/BB_Creation.ipynb
@@ -61,10 +61,10 @@
     "\n",
     "        # Disable gradient computation and reduce memory consumption.\n",
     "        with torch.no_grad():\n",
-    "            for i in range(len(dataloader)):\n",
+    "            for i,data  in enumerate(dataloader):\n",
     "\n",
-    "                vinputs, vtargets = next(iter(dataloader))#vdata\n",
-    "                vtargets = move_data_to_device(vtargets, device)\n",
+    "                vinputs, vtargets = data#next(iter(dataloader))#vdata\n",
+    "                #vtargets = move_data_to_device(vtargets, device)\n",
     "                with torch.amp.autocast(torch.device(device).type):\n",
     "                    outputs = model(torch.stack(vinputs).to(device))\n",
     "                    for j, out in enumerate(outputs):\n",
@@ -393,11 +393,9 @@
    "source": [
     "datasetType = \"Training\"\n",
     "transforms = dataTransforms(data_aug_type)\n",
-    "Train_Dataset      = ISICMaskImageDataset(dataset,\"Training\",transform=transforms, target_transform=v2.Lambda(lambda y: torch.zeros( 2, dtype=torch.int64).scatter_(dim=0, index=torch.tensor(int(y)), value=1)))\n",
-    "Validation_Dataset = ISICMaskImageDataset(dataset,\"Validation\", transform=transforms, target_transform=v2.Lambda(lambda y: torch.zeros(\n",
-    "                                        2, dtype=torch.int64).scatter_(dim=0, index=torch.tensor(int(y)), value=1)))\n",
-    "Test_Dataset       = ISICMaskImageDataset(dataset,\"Test\", transform=transforms, target_transform=v2.Lambda(lambda y: torch.zeros(\n",
-    "                                        2, dtype=torch.int64).scatter_(dim=0, index=torch.tensor(int(y)), value=1)))\n",
+    "Train_Dataset      = ISICMaskImageDataset(dataset,\"Training\",transform=transforms)\n",
+    "Validation_Dataset = ISICMaskImageDataset(dataset,\"Validation\", transform=transforms)\n",
+    "Test_Dataset       = ISICMaskImageDataset(dataset,\"Test\", transform=transforms)\n",
     "\n",
     "data_loader_params = {\n",
     "    'batch_size': batch_size,  # Batch size for data loading\n",
