--- a/ResNet_Classification.ipynb
+++ b/ResNet_Classification.ipynb
@@ -94,16 +94,14 @@
     "transforms = dataTransforms(data_aug_type,size=size,mask=False)\n",
     "\n",
     "\n",
-    "Train_Dataset      = ISICClassImageDataset(dataset,\"Training\",data_aug_type=data_aug_type,transform=transforms, target_transform=Lambda(lambda y: torch.zeros( 2, dtype=torch.float).scatter_(dim=0, index=torch.tensor(y,dtype=torch.int64), value=1)),size=size)\n",
-    "Validation_Dataset = ISICClassImageDataset(dataset,\"Validation\",data_aug_type=data_aug_type, transform=transforms, target_transform=Lambda(lambda y: torch.zeros(\n",
-    "                                        2, dtype=torch.float).scatter_(dim=0, index=torch.tensor(y,dtype=torch.int64), value=1)),size=size)\n",
-    "Test_Dataset       = ISICClassImageDataset(dataset,\"Test\",data_aug_type=data_aug_type, transform=transforms, target_transform=Lambda(lambda y: torch.zeros(\n",
-    "                                        2, dtype=torch.float).scatter_(dim=0, index=torch.tensor(y,dtype=torch.int64), value=1)),size=size)\n",
+    "Train_Dataset      = ISICClassImageDataset(dataset,\"Training\",data_aug_type=data_aug_type,transform=transforms)#, target_transform=Lambda(lambda y: torch.zeros( 2, dtype=torch.float).scatter_(dim=0, index=torch.tensor(y,dtype=torch.int64), value=1)),size=size)\n",
+    "Validation_Dataset = ISICClassImageDataset(dataset,\"Validation\",data_aug_type=data_aug_type, transform=transforms)\n",
+    "Test_Dataset       = ISICClassImageDataset(dataset,\"Test\",data_aug_type=data_aug_type, transform=transforms)\n",
     "\n",
     "data_loader_params = {\n",
     "    'batch_size': batch_size,  # Batch size for data loading\n",
-    "    'num_workers': 0,  # Number of subprocesses to use for data loading\n",
-    "    'persistent_workers': False,  # If True, the data loader will not shutdown the worker processes after a dataset has been consumed once. This allows to maintain the worker dataset instances alive.\n",
+    "    'num_workers': 8,  # Number of subprocesses to use for data loading\n",
+    "    'persistent_workers': True,  # If True, the data loader will not shutdown the worker processes after a dataset has been consumed once. This allows to maintain the worker dataset instances alive.\n",
     "    'pin_memory': True,  # If True, the data loader will copy Tensors into CUDA pinned memory before returning them. Useful when using GPU.\n",
     "    'pin_memory_device': 'cuda' ,  # Specifies the device where the data should be loaded. Commonly set to use the GPU.\n",
     "}\n",
@@ -694,11 +692,12 @@
    ],
    "source": [
     "ResNet_model_train = False\n",
-    "ResNet_model_path = 'Trained_Models\\\\ResNet152_Best_{}'.format(data_aug_type)\n",
-    "lr = 0.001\n",
+    "loss_weight = 0.50\n",
+    "ResNet_model_path = 'Trained_Models\\\\ResNet152_Best_{}_{}'.format(data_aug_type,loss_weight)\n",
+    "lr = 0.0001\n",
     "EPOCHS = 100\n",
     "ResNet_model = resnet152(weights=weights, progress=False)\n",
-    "loss_fn = torch.nn.CrossEntropyLoss(weight=torch.tensor([0.35,0.65],device=device))\n",
+    "loss_fn = torch.nn.CrossEntropyLoss(weight=torch.tensor([1-loss_weight,loss_weight],device=device))\n",
     "ResNet_model.fc = nn.Linear(in_features=2048,out_features=2,bias=True)#change our number of classes to 2\n",
     "optimizer = torch.optim.SGD(ResNet_model.parameters(), lr=lr,weight_decay=0.00001)\n",
     "scaler = torch.amp.GradScaler(\"cuda\")\n",
@@ -732,6 +731,10 @@
     "        best_acc = 0.0\n",
     "        num_correct = 0\n",
     "        num_samples = 0\n",
+    "        true_malig = 0.0\n",
+    "        true_benign = 0.0\n",
+    "        total_malig = 0.00000001 #prevent divide by zero\n",
+    "        total_benign = 0.0          \n",
     "        # Set the model to evaluation mode, disabling dropout and using population\n",
     "        # statistics for batch normalization.\n",
     "        ResNet_model.eval()\n",
@@ -752,25 +755,31 @@
     "                #print((preds == vtarget).sum(), preds.size(0))\n",
     "                num_correct += (preds == vtarget).sum()\n",
     "                num_samples += preds.size(0)\n",
+    "                true_malig   += torch.sum(((preds == 1.0) & (vtarget == 1.0))).item()\n",
+    "                true_benign  += torch.sum(((preds == 0.0) & (vtarget == 0.0))).item()\n",
+    "                total_malig  += torch.sum(preds == 1.0).item()\n",
+    "                total_benign += torch.sum(preds == 0.0).item()\n",
+    "                #print(true_benign,total_benign)\n",
+    "                #print(true_malig,total_malig)\n",
     "                \n",
     "                \n",
     "        acc = float(num_correct) / num_samples\n",
-    "\n",
+    "        bal_acc = 0.5*((true_malig/total_malig)+(true_benign/total_benign))\n",
     "        avg_vloss = running_vloss / (i + 1)\n",
     "        print('LOSS train {} valid {}'.format(avg_loss, avg_vloss))\n",
-    "        print('Accuracy:', acc)\n",
+    "        print('Accuracy:', acc, \"Balanced Accuracy:\", bal_acc)\n",
     "        # Log the running loss averaged per batch\n",
     "        # for both training and validation\n",
     "        writer.add_scalars('Training vs. Validation Loss',\n",
     "                        { 'Training' : avg_loss, 'Validation' : avg_vloss },\n",
     "                        epoch_number + 1)\n",
-    "        writer.add_scalar(\"Accuracy\",acc,epoch_number+1)\n",
+    "        writer.add_scalar(\"Balanced Accuracy\",bal_acc,epoch_number+1)\n",
     "        writer.flush()\n",
     "\n",
     "        # Track best performance, and save the model's state\n",
     "        #AKA early stopping, a form of regularization we talked about it class\n",
-    "        if acc > best_acc:\n",
-    "            best_acc = acc\n",
+    "        if bal_acc > best_acc:\n",
+    "            best_acc = bal_acc\n",
     "            torch.save(ResNet_model.state_dict(), \"{}\".format(ResNet_model_path))\n",
     "\n",
     "        epoch_number += 1\n"
@@ -815,18 +824,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8433333333333334\n"
-     ]
-    },
-    {
-     "ename": "ZeroDivisionError",
-     "evalue": "float division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mZeroDivisionError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 30\u001b[39m\n\u001b[32m     28\u001b[39m     acc = \u001b[38;5;28mfloat\u001b[39m(num_correct) / num_samples\n\u001b[32m     29\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m'\u001b[39m\u001b[33mAccuracy:\u001b[39m\u001b[33m'\u001b[39m, acc)\n\u001b[32m---> \u001b[39m\u001b[32m30\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m'\u001b[39m\u001b[33mBalanced Accuracy:\u001b[39m\u001b[33m'\u001b[39m, (\u001b[32m0.5\u001b[39m*(\u001b[38;5;28;43mfloat\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mtrue_malig\u001b[49m\u001b[43m)\u001b[49m\u001b[43m/\u001b[49m\u001b[43mtotal_malig\u001b[49m)+(\u001b[38;5;28mfloat\u001b[39m(true_benign)/total_benign)))\n",
-      "\u001b[31mZeroDivisionError\u001b[39m: float division by zero"
+      "Accuracy: 0.825\n",
+      "Balanced Accuracy: 0.7188538205980066\n"
      ]
     }
    ],
@@ -834,12 +833,12 @@
     "ResNet_model.eval()\n",
     "running_loss = 0.0\n",
     "best_acc = 0.0\n",
-    "num_correct = 0\n",
-    "num_samples = 0\n",
-    "true_malig = 0\n",
-    "true_benign = 0\n",
-    "total_malig = 0\n",
-    "total_benign = 0\n",
+    "num_correct = 0.0\n",
+    "num_samples = 0.0\n",
+    "true_malig = 0.0\n",
+    "true_benign = 0.0\n",
+    "total_malig = 0.0\n",
+    "total_benign = 0.0\n",
     "# Disable gradient computation and reduce memory consumption.\n",
     "with torch.no_grad():\n",
     "    for i, vdata in enumerate(test_dataloader):\n",
@@ -852,15 +851,16 @@
     "        running_loss += loss\n",
     "        _, preds = outputs.max(1)\n",
     "        _, target = targets.max(1)\n",
-    "        num_correct += (preds == target).sum()\n",
+    "        num_correct += torch.sum(preds == target).item()\n",
     "        num_samples += preds.size(0)\n",
-    "        true_malig += ((preds == target) == 1.0).sum()\n",
-    "        true_benign +=(( preds == target) == 0.0).sum()\n",
-    "        true_malig += (preds == 1).sum()\n",
-    "        true_benign +=(preds == 0).sum()\n",
-    "    acc = float(num_correct) / num_samples\n",
+    "        #print(((preds == 0.0) == (target == 0.0)) == 0.0)\n",
+    "        true_malig   += torch.sum(((preds == 1.0) & (target == 1.0))).item()\n",
+    "        true_benign  += torch.sum(((preds == 0.0) & (target == 0.0))).item()\n",
+    "        total_malig  += torch.sum(preds == 1.0).item()\n",
+    "        total_benign += torch.sum(preds == 0.0).item()\n",
+    "    acc = (num_correct / num_samples)\n",
     "print('Accuracy:', acc)\n",
-    "print('Balanced Accuracy:', (0.5*(float(true_malig)/total_malig)+(float(true_benign)/total_benign)))"
+    "print('Balanced Accuracy:', 0.5*((true_malig/total_malig)+(true_benign/total_benign)))"
    ]
   }
  ],
