data augmentations almost done

--- a/BB_Creation.ipynb
+++ b/BB_Creation.ipynb
@@ -30,10 +30,7 @@
     "import pandas as pd\n",
     "import os\n",
     "from dataloader import ISICMaskImageDataset\n",
-    "from transforms import dataTransforms\n",
     "from torch.utils.data import DataLoader\n",
-    "import torchvision.transforms.v2 as v2\n",
-    "from cjm_pytorch_utils.core import  move_data_to_device\n",
     "batch_size = 1\n",
     "dataset = \"Dataset_2017\\\\\"\n",
     "data_aug_type = \"1\" #what data augmentation schema to train on\n",
@@ -45,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e570f464",
    "metadata": {},
    "outputs": [],
@@ -53,7 +50,11 @@
     "import csv\n",
     "def writeCSV(model,dataloader,device,dataset,datasetType,data_aug_type):\n",
     "    filepath = \"{}\\\\Pred_bb\\\\{}_bb_{}.csv\".format(dataset, datasetType, data_aug_type)\n",
-    "    img_labels = pd.read_csv(os.path.join(dataset, datasetType+\"_GroundTruth.csv\"))\n",
+    "    if(datasetType == \"Training\"):\n",
+    "        data_aug_type_label = data_aug_type\n",
+    "    else:\n",
+    "        data_aug_type_label = \"1\"\n",
+    "    img_labels = pd.read_csv(os.path.join(dataset,os.path.join(\"Ground_Truths\", datasetType+\"_GroundTruth_\"+data_aug_type_label+\".csv\")))\n",
     "    with open(filepath, mode=\"w\", newline=\"\") as file:\n",
     "        writer = csv.writer(file)\n",
     "        writer.writerow([\"image_id\",\"x1\",\"y1\",\"x2\",\"y2\"])\n",
@@ -386,16 +387,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4c9d6d1d",
    "metadata": {},
    "outputs": [],
    "source": [
     "datasetType = \"Training\"\n",
-    "transforms = dataTransforms(data_aug_type)\n",
-    "Train_Dataset      = ISICMaskImageDataset(dataset,\"Training\",transform=transforms)\n",
-    "Validation_Dataset = ISICMaskImageDataset(dataset,\"Validation\", transform=transforms)\n",
-    "Test_Dataset       = ISICMaskImageDataset(dataset,\"Test\", transform=transforms)\n",
+    "\n",
+    "Train_Dataset      = ISICMaskImageDataset(dataset, \"Training\",data_aug_type=data_aug_type)\n",
+    "Validation_Dataset = ISICMaskImageDataset(dataset, \"Validation\", data_aug_type=\"1\")\n",
+    "Test_Dataset       = ISICMaskImageDataset(dataset, \"Test\", data_aug_type=\"1\")\n",
     "\n",
     "data_loader_params = {\n",
     "    'batch_size': batch_size,  # Batch size for data loading\n",
