--- a/ResNet_Classification.ipynb
+++ b/ResNet_Classification.ipynb
@@ -40,16 +40,13 @@
    ],
    "source": [
     "import torch\n",
-    "import matplotlib.pyplot as plt\n",
-    "import multiprocessing\n",
+    "#import matplotlib.pyplot as plt\n",
     "import torch.nn as nn\n",
-    "import numpy as np\n",
     "#import torchvision\n",
-    "import torchvision.transforms.v2 as v2\n",
-    "from torchvision.transforms.v2 import Lambda\n",
-    "from torchvision.utils import draw_bounding_boxes\n",
+    "#import torchvision.transforms.v2 as v2\n",
+    "#from torchvision.transforms.v2 import Lambda\n",
+    "#from torchvision.utils import draw_bounding_boxes\n",
     "from torch.utils.data import  DataLoader\n",
-    "from cjm_pytorch_utils.core import  move_data_to_device\n",
     "from dataloader import ISICClassImageDataset\n",
     "from transforms import dataTransforms\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
@@ -94,13 +91,13 @@
     "transforms = dataTransforms(data_aug_type,size=size,mask=False)\n",
     "\n",
     "\n",
-    "Train_Dataset      = ISICClassImageDataset(dataset,\"Training\",data_aug_type=data_aug_type,transform=transforms)#, target_transform=Lambda(lambda y: torch.zeros( 2, dtype=torch.float).scatter_(dim=0, index=torch.tensor(y,dtype=torch.int64), value=1)),size=size)\n",
-    "Validation_Dataset = ISICClassImageDataset(dataset,\"Validation\",data_aug_type=data_aug_type, transform=transforms)\n",
-    "Test_Dataset       = ISICClassImageDataset(dataset,\"Test\",data_aug_type=data_aug_type, transform=transforms)\n",
+    "Train_Dataset      = ISICClassImageDataset(dataset,\"Training\",data_aug_type=data_aug_type,size=size)#, target_transform=Lambda(lambda y: torch.zeros( 2, dtype=torch.float).scatter_(dim=0, index=torch.tensor(y,dtype=torch.int64), value=1)),size=size)\n",
+    "Validation_Dataset = ISICClassImageDataset(dataset,\"Validation\",data_aug_type=\"1\", size=size)\n",
+    "Test_Dataset       = ISICClassImageDataset(dataset,\"Test\",data_aug_type=\"1\", size=size)\n",
     "\n",
     "data_loader_params = {\n",
     "    'batch_size': batch_size,  # Batch size for data loading\n",
-    "    'num_workers': 8,  # Number of subprocesses to use for data loading\n",
+    "    'num_workers': 10,  # Number of subprocesses to use for data loading\n",
     "    'persistent_workers': True,  # If True, the data loader will not shutdown the worker processes after a dataset has been consumed once. This allows to maintain the worker dataset instances alive.\n",
     "    'pin_memory': True,  # If True, the data loader will copy Tensors into CUDA pinned memory before returning them. Useful when using GPU.\n",
     "    'pin_memory_device': 'cuda' ,  # Specifies the device where the data should be loaded. Commonly set to use the GPU.\n",
@@ -692,14 +689,14 @@
    ],
    "source": [
     "ResNet_model_train = False\n",
-    "loss_weight = 0.50\n",
+    "loss_weight = 0.75\n",
     "ResNet_model_path = 'Trained_Models\\\\ResNet152_Best_{}_{}'.format(data_aug_type,loss_weight)\n",
-    "lr = 0.0001\n",
+    "lr = 0.001\n",
     "EPOCHS = 100\n",
     "ResNet_model = resnet152(weights=weights, progress=False)\n",
     "loss_fn = torch.nn.CrossEntropyLoss(weight=torch.tensor([1-loss_weight,loss_weight],device=device))\n",
     "ResNet_model.fc = nn.Linear(in_features=2048,out_features=2,bias=True)#change our number of classes to 2\n",
-    "optimizer = torch.optim.SGD(ResNet_model.parameters(), lr=lr,weight_decay=0.00001)\n",
+    "optimizer = torch.optim.SGD(ResNet_model.parameters(), lr=lr,weight_decay=0.000001)\n",
     "scaler = torch.amp.GradScaler(\"cuda\")\n",
     "lr_scheduler = torch.optim.lr_scheduler.OneCycleLR(optimizer, max_lr=0.01, total_steps=EPOCHS*len(train_dataloader))\n",
     "ResNet_model.to(device)"
@@ -824,8 +821,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.825\n",
-      "Balanced Accuracy: 0.7188538205980066\n"
+      "Accuracy: 0.8133333333333334\n",
+      "Balanced Accuracy: 0.7033316445081151\n"
      ]
     }
    ],
