--- a/BB_Creation.ipynb
+++ b/BB_Creation.ipynb
@@ -33,7 +33,7 @@
     "from torch.utils.data import DataLoader\n",
     "batch_size = 1\n",
     "dataset = \"Dataset_2017\\\\\"\n",
-    "data_aug_type = \"1\" #what data augmentation schema to train on\n",
+    "data_aug_type = \"4\" #what data augmentation schema to train on\n",
     "mask_model_path = 'Trained_Models\\\\Mask-RCNN_Best_{}'.format(data_aug_type)\n",
     "\n",
     "device = \"cuda\"\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e570f464",
    "metadata": {},
    "outputs": [],
@@ -387,12 +387,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4c9d6d1d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "datasetType = \"Training\"\n",
+    "datasetType = \"Validation\"\n",
     "\n",
     "Train_Dataset      = ISICMaskImageDataset(dataset, \"Training\",data_aug_type=data_aug_type)\n",
     "Validation_Dataset = ISICMaskImageDataset(dataset, \"Validation\", data_aug_type=\"1\")\n",
@@ -418,7 +418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "writeCSV(mask_model,train_dataloader,device,dataset,datasetType,data_aug_type)"
+    "writeCSV(mask_model,validation_dataloader,device,dataset,datasetType,data_aug_type)"
    ]
   }
  ],
