push training model 6

--- a/BB_Creation.ipynb
+++ b/BB_Creation.ipynb
@@ -33,7 +33,7 @@
     "from torch.utils.data import DataLoader\n",
     "batch_size = 1\n",
     "dataset = \"Dataset_2017\\\\\"\n",
-    "data_aug_type = \"4\" #what data augmentation schema to train on\n",
+    "data_aug_type = \"2\" #what data augmentation schema to train on\n",
     "mask_model_path = 'Trained_Models\\\\Mask-RCNN_Best_{}'.format(data_aug_type)\n",
     "\n",
     "device = \"cuda\"\n",
@@ -392,7 +392,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datasetType = \"Validation\"\n",
+    "datasetType = \"Test\"\n",
     "\n",
     "Train_Dataset      = ISICMaskImageDataset(dataset, \"Training\",data_aug_type=data_aug_type)\n",
     "Validation_Dataset = ISICMaskImageDataset(dataset, \"Validation\", data_aug_type=\"1\")\n",
@@ -418,7 +418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "writeCSV(mask_model,validation_dataloader,device,dataset,datasetType,data_aug_type)"
+    "writeCSV(mask_model,test_dataloader,device,dataset,datasetType,data_aug_type)"
    ]
   }
  ],
