All models are trained

--- a/BB_Creation.ipynb
+++ b/BB_Creation.ipynb
@@ -29,12 +29,16 @@
     "import torch\n",
     "import pandas as pd\n",
     "import os\n",
-    "from dataloader import ISICMaskImageDataset\n",
+    "from dataloader import ISICMaskImageDataset_for_generation\n",
     "from torch.utils.data import DataLoader\n",
     "batch_size = 1\n",
-    "dataset = \"Dataset_2017\\\\\"\n",
-    "data_aug_type = \"2\" #what data augmentation schema to train on\n",
-    "mask_model_path = 'Trained_Models\\\\Mask-RCNN_Best_{}'.format(data_aug_type)\n",
+    "dataset = \"Dataset_2018\"\n",
+    "data_aug_type = \"1\" #what data augmentation schema to train on\n",
+    "if data_aug_type == \"5\":\n",
+    "    dataset = dataset+\"_ph2\"\n",
+    "    mask_model_path = 'Trained_Models\\\\Mask-RCNN_Best_{}'.format(\"1\")\n",
+    "else:\n",
+    "    mask_model_path = 'Trained_Models\\\\Mask-RCNN_Best_{}'.format(data_aug_type)\n",
     "\n",
     "device = \"cuda\"\n",
     "device = torch.device(device)"
@@ -63,16 +67,21 @@
     "        # Disable gradient computation and reduce memory consumption.\n",
     "        with torch.no_grad():\n",
     "            for i,data  in enumerate(dataloader):\n",
-    "\n",
-    "                vinputs, vtargets = data#next(iter(dataloader))#vdata\n",
+    "                #print(data)\n",
+    "                #print(data)\n",
+    "                vinputs = data#next(iter(dataloader))#vdata\n",
     "                #vtargets = move_data_to_device(vtargets, device)\n",
     "                with torch.amp.autocast(torch.device(device).type):\n",
-    "                    outputs = model(torch.stack(vinputs).to(device))\n",
+    "                    outputs = model(vinputs.to(device))\n",
     "                    for j, out in enumerate(outputs):\n",
     "                        #print(out)\n",
     "                        #print(\"{}\".format(img_labels.iloc[i*batch_size+j, 0]))\n",
     "                        #print(i*batch_size+j)\n",
-    "                        bb = out[\"boxes\"][out[\"scores\"].argmax(0).item()].tolist()\n",
+    "                        #print(out[\"boxes\"].shape[0])\n",
+    "                        if(out[\"boxes\"].shape[0] == 0):\n",
+    "                            bb = (0.0,0.0,256.0,256.0)\n",
+    "                        else:\n",
+    "                            bb = out[\"boxes\"][out[\"scores\"].argmax(0).item()].tolist()\n",
     "                        writer.writerow([\"{}\".format(img_labels.iloc[i*batch_size+j, 0]),bb[0],bb[1],bb[2],bb[3]])"
    ]
   },
@@ -394,9 +403,9 @@
    "source": [
     "datasetType = \"Test\"\n",
     "\n",
-    "Train_Dataset      = ISICMaskImageDataset(dataset, \"Training\",data_aug_type=data_aug_type)\n",
-    "Validation_Dataset = ISICMaskImageDataset(dataset, \"Validation\", data_aug_type=\"1\")\n",
-    "Test_Dataset       = ISICMaskImageDataset(dataset, \"Test\", data_aug_type=\"1\")\n",
+    "Train_Dataset      = ISICMaskImageDataset_for_generation(dataset, \"Training\",data_aug_type=data_aug_type)\n",
+    "Validation_Dataset = ISICMaskImageDataset_for_generation(dataset, \"Validation\", data_aug_type=\"1\")\n",
+    "Test_Dataset       = ISICMaskImageDataset_for_generation(dataset, \"Test\", data_aug_type=\"1\")\n",
     "\n",
     "data_loader_params = {\n",
     "    'batch_size': batch_size,  # Batch size for data loading\n",
@@ -404,7 +413,7 @@
     "    'persistent_workers': False,  # If True, the data loader will not shutdown the worker processes after a dataset has been consumed once. This allows to maintain the worker dataset instances alive.\n",
     "    'pin_memory': True,  # If True, the data loader will copy Tensors into CUDA pinned memory before returning them. Useful when using GPU.\n",
     "    'pin_memory_device': 'cuda' ,  # Specifies the device where the data should be loaded. Commonly set to use the GPU.\n",
-    "    'collate_fn': lambda batch: tuple(zip(*batch)),\n",
+    "    #'collate_fn': lambda batch: tuple(zip(*batch)),\n",
     "}\n",
     "train_dataloader      = DataLoader(Train_Dataset, **data_loader_params, shuffle=False,in_order=True)\n",
     "validation_dataloader = DataLoader(Validation_Dataset, **data_loader_params, shuffle=False,in_order=True)\n",
