--- a/aug_csv_gen.ipynb
+++ b/aug_csv_gen.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "93b13e70",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "dcccb29e",
    "metadata": {},
    "outputs": [
@@ -235,6 +235,90 @@
     "print(num_benign)\n",
     "print(\"Ratio:\",num_malig/(num_benign))\n",
     "new_img_labels_4.to_csv(os.path.join(dataset,os.path.join(\"Ground_Truths\", \"Training_GroundTruth_4.csv\")), index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0da01a3e",
+   "metadata": {},
+   "source": [
+    "# Data Manipluation 5\n",
+    "Pulling malignant images from the [PH2 Dataset](https://github.com/vikaschouhan/PH2-dataset):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "19b5f4c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New Distribution:\n",
+      "414\n",
+      "1626\n",
+      "Ratio: 0.25461254612546125\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_img_labels_5 = img_labels.copy(deep=True)\n",
+    "dataset = \"Dataset_2017_ph2\"\n",
+    "ph2 = pd.read_csv(os.path.join(dataset,os.path.join(\"Ground_Truths\", \"PH2_simple_dataset.csv\")))\n",
+    "#bring labels in line with out dataset\n",
+    "ph2 = ph2.rename(columns={'image_name': 'image_id', 'diagnosis': 'melanoma'})\n",
+    "\n",
+    "for index,row, in ph2.iterrows():\n",
+    "    #only copy melanoma samples\n",
+    "    if(row.iloc[1] == \"Melanoma\"):  \n",
+    "        #rename melanoma to true\n",
+    "        row.iloc[1] = 1.0\n",
+    "        row.iloc[1] = 1.0\n",
+    "        new_img_labels_5 = pd.concat([new_img_labels_5,row.to_frame().T],ignore_index=True)\n",
+    "new_img_labels_5[\"seborrheic_keratosis\"] = 0.0\n",
+    "new_img_labels_5[\"transform\"] = 0\n",
+    "print(\"New Distribution:\")\n",
+    "counts = new_img_labels_5['melanoma'].value_counts()\n",
+    "num_malig  = counts[1.0]\n",
+    "num_benign = counts[0.0]\n",
+    "print(num_malig)\n",
+    "print(num_benign)\n",
+    "print(\"Ratio:\",num_malig/(num_benign))\n",
+    "new_img_labels_5.to_csv(os.path.join(dataset,os.path.join(\"Ground_Truths\", \"Training_GroundTruth_5.csv\")), index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be2058de",
+   "metadata": {},
+   "source": [
+    "# Data Manipulation 7\n",
+    "Here I am just cleaning up the 2018 dataset csv's"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6bf806c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#can only be ran once\n",
+    "dataset = \"Dataset_2018\"\n",
+    "train = pd.read_csv(os.path.join(dataset,os.path.join(\"Ground_Truths\", \"Training_GroundTruth_1.csv\")))\n",
+    "new_train = train.drop(['NV','BCC','AKIEC','BKL','DF','VASC'], axis=1)\n",
+    "new_train.to_csv(os.path.join(dataset,os.path.join(\"Ground_Truths\", \"Training_GroundTruth_5.csv\")), index=False)\n",
+    "test = pd.read_csv(os.path.join(dataset,os.path.join(\"Ground_Truths\", \"Test_GroundTruth_1.csv\")))\n",
+    "new_test = test.drop(['NV','BCC','AKIEC','BKL','DF','VASC'], axis=1)\n",
+    "new_test = new_test.rename(columns={'image': 'image_id', 'MEL': 'melanoma'})\n",
+    "new_test.to_csv(os.path.join(dataset,os.path.join(\"Ground_Truths\", \"Test_GroundTruth_1.csv\")), index=False)\n",
+    "\n",
+    "val = pd.read_csv(os.path.join(dataset,os.path.join(\"Ground_Truths\", \"Validation_GroundTruth_1.csv\")))\n",
+    "new_val = val.drop(['NV','BCC','AKIEC','BKL','DF','VASC'], axis=1)\n",
+    "new_val = new_val.rename(columns={'image': 'image_id', 'MEL': 'melanoma'})\n",
+    "new_val.to_csv(os.path.join(dataset,os.path.join(\"Ground_Truths\", \"Validation_GroundTruth_1.csv\")), index=False)\n"
    ]
   }
  ],
