Result Generation implemented

--- a/BB_Creation.ipynb
+++ b/BB_Creation.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9cdfd18a",
    "metadata": {},
    "outputs": [],
@@ -32,13 +32,13 @@
     "from dataloader import ISICMaskImageDataset_for_generation\n",
     "from torch.utils.data import DataLoader\n",
     "batch_size = 1\n",
-    "dataset = \"Dataset_2018\"\n",
-    "data_aug_type = \"1\" #what data augmentation schema to train on\n",
+    "dataset = \"Dataset_2017\"\n",
+    "data_aug_type = \"2\" #what data augmentation schema to train on\n",
     "if data_aug_type == \"5\":\n",
     "    dataset = dataset+\"_ph2\"\n",
-    "    mask_model_path = 'Trained_Models\\\\Mask-RCNN_Best_{}'.format(\"1\")\n",
+    "    mask_model_path = 'Trained_Models\\\\Mask-RCNN_{}'.format(\"1\")\n",
     "else:\n",
-    "    mask_model_path = 'Trained_Models\\\\Mask-RCNN_Best_{}'.format(data_aug_type)\n",
+    "    mask_model_path = 'Trained_Models\\\\Mask-RCNN_{}'.format(data_aug_type)\n",
     "\n",
     "device = \"cuda\"\n",
     "device = torch.device(device)"
@@ -401,9 +401,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datasetType = \"Test\"\n",
+    "datasetType = \"Validation\"\n",
     "\n",
-    "Train_Dataset      = ISICMaskImageDataset_for_generation(dataset, \"Training\",data_aug_type=data_aug_type)\n",
+    "Train_Dataset      = ISICMaskImageDataset_for_generation(dataset, \"Training\",data_aug_type=\"1\")\n",
     "Validation_Dataset = ISICMaskImageDataset_for_generation(dataset, \"Validation\", data_aug_type=\"1\")\n",
     "Test_Dataset       = ISICMaskImageDataset_for_generation(dataset, \"Test\", data_aug_type=\"1\")\n",
     "\n",
@@ -422,12 +422,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e0a3e694",
    "metadata": {},
    "outputs": [],
    "source": [
-    "writeCSV(mask_model,test_dataloader,device,dataset,datasetType,data_aug_type)"
+    "writeCSV(mask_model,train_dataloader,device,dataset,datasetType,data_aug_type)"
    ]
   }
  ],
