--- a/aug_csv_gen.ipynb
+++ b/aug_csv_gen.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "93b13e70",
    "metadata": {},
    "outputs": [],
@@ -319,6 +319,35 @@
     "new_val = val.drop(['NV','BCC','AKIEC','BKL','DF','VASC'], axis=1)\n",
     "new_val = new_val.rename(columns={'image': 'image_id', 'MEL': 'melanoma'})\n",
     "new_val.to_csv(os.path.join(dataset,os.path.join(\"Ground_Truths\", \"Validation_GroundTruth_1.csv\")), index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c98acd7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New Distribution:\n",
+      "1113\n",
+      "8902\n",
+      "Ratio: 0.12502808357672432\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = \"Dataset_2018\"\n",
+    "train = pd.read_csv(os.path.join(dataset,os.path.join(\"Ground_Truths\", \"Training_GroundTruth_1.csv\")))\n",
+    "print(\"New Distribution:\")\n",
+    "counts = train['melanoma'].value_counts()\n",
+    "num_malig  = counts[1.0]\n",
+    "num_benign = counts[0.0]\n",
+    "print(num_malig)\n",
+    "print(num_benign)\n",
+    "print(\"Ratio:\",num_malig/(num_benign))"
    ]
   }
  ],
